Add my second math trainer

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -16,4 +16,8 @@ console.log('hello');
 
 import SeqSum from '@site/src/components/SeqSum';
 
+import VecLength from '@site/src/components/VecLength';
+
 <SeqSum />
+
+<VecLength />
