--- a/docs/01-intro.mdx
+++ b/docs/01-intro.mdx
@@ -2,6 +2,6 @@
 
 lorem ipsum dolor sit amet
 
-import Counter from '@site/src/components/Counter';
+import Counter from "@site/src/components/Counter";
 
 <Counter />
