--- a/docs/02-my-components.mdx
+++ b/docs/02-my-components.mdx
@@ -9,14 +9,14 @@ sidebar_position: 1
 lorem ipsum goiteens
 
 ```js
-console.log('hello');
+console.log("hello");
 ```
 
 ## My components
 
-import SeqSum from '@site/src/components/SeqSum';
+import SeqSum from "@site/src/components/SeqSum";
 
-import VecLength from '@site/src/components/VecLength';
+import VecLength from "@site/src/components/VecLength";
 
 <SeqSum />
 
